fixed logo and nav container and fixed contact form alignment

--- a/css/style.css
+++ b/css/style.css
@@ -189,7 +189,17 @@ font header .navbar-default .navbar-nav li a:hover {
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between;
-  padding: .25rem 3em 1em;
+  padding: .25rem 0em 1em;
+}
+
+.navbar-brand {
+  display: inline-block;
+  padding-top: 0;
+  padding-bottom: .3125rem;
+  /* margin-right: 1rem; */
+  font-size: 1.25rem;
+  line-height: inherit;
+  white-space: nowrap;
 }
 
 /*---------------------------------------------
